# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  main.cpp
Documentation/: GeodeticoUML.txt  GoldbergUML.txt  ImportUML.txt  PlantUML.txt
Documentation/UML/: OutputUML.txt  TriangulationUML.txt
ExportParaview/: CMakeLists.txt  UCDUtilities.cpp
Progetto/: CMakeLists.txt  Converter.py  main.cpp  main_test.cpp
Progetto/PlatonicSolids/Icosaedro/: Cell2Ds.csv
Progetto/PlatonicSolids/Ottaedro/: Cell0Ds.csv  Cell2Ds.csv
Progetto/PlatonicSolids/Tetraedro/: Cell0Ds.csv  Cell2Ds.csv
Progetto/Platonic_solids/Icosaedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Progetto/Platonic_solids/Ottaedro/: Cell1Ds.csv  Cell2Ds.csv
Progetto/Prove/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv  TestCell0Ds.txt  TestCell1Ds.txt  TestCell2Ds.txt
Progetto/src/: CMakeLists.txt  PolyhedralMesh.hpp  Utils.cpp  Utils.hpp
Progetto/src_test/: CMakeLists.txt  test_code.hpp
src/: CMakeLists.txt
